force-app/main/default/objects/BU_Staging_Field_Mapping_Metadata__mdt/BU_Staging_Field_Mapping_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>BU Staging Field Mapping Metadata</label>
    <pluralLabel>BU Staging Field Mapping Metadata</pluralLabel>
</CustomObject>