force-app/main/default/objects/BU_Staging_Field_Mapping_Metadata__mdt/fields/Is_Staging_Field_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Staging_Field_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Staging Field Mandatory</label>
    <type>Checkbox</type>
</CustomField>