force-app/main/default/objects/BU_Staging_Field_Mapping_Metadata__mdt/fields/Sobject_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Field_API_Name__c</fullName>
    <label>Sobject Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>