force-app/main/default/objects/BU_Staging_Field_Mapping_Metadata__mdt/fields/Staging_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Staging_Field_API_Name__c</fullName>
    <label>Staging Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>